<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Package installer</string>
    <string name="install">Install</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="installing">Installing\u2026</string>
    <string name="installing_app">Installing <xliff:g id="package_label">%1$s</xliff:g>\u2026</string>
    <string name="install_done">App installed.</string>
    <string name="install_confirm_question">Do you want to install this application?</string>
    <string name="install_confirm_question_update">Do you want to install an update
            to this existing application?  Your existing data will not
            be lost.</string>
    <string name="install_confirm_question_update_system">Do you want to install an update
            to this built-in application?  Your existing data will not
            be lost.</string>
    <string name="install_failed">App not installed.</string>
    <string name="install_failed_blocked">The package was blocked from being installed.</string>
    <string name="install_failed_conflict">App not installed as package conflicts with an existing package.</string>
    <string name="install_failed_incompatible" product="default">App not installed as app isn\'t
        compatible with your phone.</string>
    <string name="install_failed_invalid_apk">App not installed as package appears to be invalid.</string>
    <string name="install_failed_msg" product="default"><xliff:g id="app_name">%1$s</xliff:g> couldn\'t be installed on your phone.</string>
    <string name="launch">Open</string>
    <string name="unknown_apps_admin_dlg_text">Your admin doesn\'t allow installation of apps
        obtained from unknown sources</string>
    <string name="unknown_apps_user_restriction_dlg_text">Unknown apps can\'t be installed by this
        user</string>
    <string name="install_apps_user_restriction_dlg_text">This user is not allowed to install apps</string>
    <string name="ok">OK</string>
    <string name="manage_applications">Manage apps</string>
    <string name="out_of_space_dlg_title">Out of space</string>
    <string name="out_of_space_dlg_text"><xliff:g id="app_name">%1$s</xliff:g> couldn\'t be installed. Free up some space and try again.</string>
    <string name="app_not_found_dlg_title">App not found</string>
    <string name="app_not_found_dlg_text"> The app wasn\'t found in the list of installed apps.</string>
    <string name="user_is_not_allowed_dlg_title">Not allowed</string>
    <string name="user_is_not_allowed_dlg_text">The current user is not allowed to perform this uninstallation.</string>
    <string name="generic_error_dlg_title">Error</string>
    <string name="generic_error_dlg_text">App could not be uninstalled.</string>
    <string name="uninstall_application_title">Uninstall app</string>
    <string name="uninstall_update_title">Uninstall update</string>
    <string name="uninstall_activity_text"><xliff:g id="activity_name">%1$s</xliff:g> is part of the following app:</string>
    <string name="uninstall_application_text">Do you want to uninstall this app?</string>
    <string name="uninstall_application_text_all_users">Do you want to uninstall this app for <b>all</b>
        users?  The application and its data will be removed from <b>all</b> users on the device.</string>
    <string name="uninstall_application_text_user">Do you want to uninstall this app for the user <xliff:g id="username">%1$s</xliff:g>?</string>
    <string name="uninstall_update_text">Replace this app with the factory version? All data will be removed.</string>
    <string name="uninstall_update_text_multiuser">Replace this app with the factory version? All data will be removed. This affects all users of this device, including those with work profiles.</string>
    <string name="uninstall_keep_data">Keep <xliff:g example="1.5MB" id="size">%1$s</xliff:g> of app data.</string>
    <string name="uninstalling_notification_channel">Running uninstalls</string>
    <string name="uninstall_failure_notification_channel">Failed uninstalls</string>
    <string name="uninstalling">Uninstalling\u2026</string>
    <string name="uninstalling_app">Uninstalling <xliff:g id="package_label">%1$s</xliff:g>\u2026</string>
    <string name="uninstall_done">Uninstall finished.</string>
    <string name="uninstall_done_app">Uninstalled <xliff:g id="package_label">%1$s</xliff:g></string>
    <string name="uninstall_failed">Uninstall unsuccessful.</string>
    <string name="uninstall_failed_app">Uninstalling <xliff:g id="package_label">%1$s</xliff:g> unsuccessful.</string>
    <string name="uninstall_failed_device_policy_manager">Can\'t uninstall active device admin
        app</string>
    <string name="uninstall_failed_device_policy_manager_of_user">Can\'t uninstall active device
        admin app for <xliff:g id="username">%1$s</xliff:g></string>
    <string name="uninstall_all_blocked_profile_owner">This app is required for some users or
        profiles and was uninstalled for others</string>
    <string name="uninstall_blocked_profile_owner">This app is needed for
        your profile and can\'t be uninstalled.</string>
    <string name="uninstall_blocked_device_owner">This app is required
        by your device administrator and can\'t be uninstalled.</string>
    <string name="manage_device_administrators">Manage device admin apps</string>
    <string name="manage_users">Manage users</string>
    <string name="uninstall_failed_msg"><xliff:g id="app_name">%1$s</xliff:g> couldn\'t be uninstalled.</string>
    <string name="Parse_error_dlg_text">There was a problem parsing the package.</string>
    <string name="wear_not_allowed_dlg_title">Android Wear</string>
    <string name="wear_not_allowed_dlg_text">Install/Uninstall actions not supported on Wear.</string>
    <string name="message_staging">Staging app&#8230;</string>
    <string name="app_name_unknown">Unknown</string>
    <string name="untrusted_external_source_warning" product="default">For your security, your phone is not allowed to install unknown apps from this source.</string>
    <string name="anonymous_source_warning" product="tv">
        Your TV and personal data are more vulnerable
        to attack by unknown apps. By installing this app, you
        agree that you are responsible for any damage to your
        TV or loss of data that may result from its use.
    </string>
    <string name="anonymous_source_continue">Continue</string>
    <string name="external_sources_settings">Settings</string>
    <string name="wear_app_channel">Installing/uninstalling wear apps</string>
    <string name="app_installed_notification_channel_description">App installed notification</string>
    <string name="notification_installation_success_message">Successfully installed</string>
    <string name="notification_installation_success_status">Successfully installed \u201c<xliff:g example="Package Installer" id="appname">%1$s</xliff:g>\u201d</string>
</resources>