<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2018 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="?android:attr/dialogPreferredPadding"
    android:paddingTop="8dp"
    android:paddingRight="?android:attr/dialogPreferredPadding"
    android:theme="?android:attr/alertDialogTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/pin" />

        <ImageView
            android:id="@+id/app_icon2"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/app_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="18dp"
            android:singleLine="true"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="26sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/staging"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible">

                <ProgressBar
                    android:id="@+id/progress_indeterminate"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:indeterminateDrawable="@drawable/progressdrw"
                    android:paddingTop="8dp" />

                <TextView
                    style="@android:style/TextAppearance.Material.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/message_staging"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/installing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible">

                <ProgressBar
                    android:id="@+id/progress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:progressDrawable="@drawable/progressdrw" />

                <TextView
                    style="@android:style/TextAppearance.Material.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/installing"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/updating_app_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible"
                tools:visibility="visible">

                <FrameLayout
                    android:id="@+id/statusLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/dialog_sub_background"
                    android:padding="16dp"
                    android:theme="?android:attr/alertDialogTheme"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/install_confirm_question"
                        style="@android:style/TextAppearance.Material.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/install_confirm_question"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/install_confirm_question_update"
                        style="@android:style/TextAppearance.Material.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/install_confirm_question_update"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/install_confirm_question_update_system"
                        style="@android:style/TextAppearance.Material.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/install_confirm_question_update_system"
                        android:visibility="gone" />
                </FrameLayout>

                <LinearLayout
                    android:id="@+id/version_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingTop="24dp"
                    android:paddingBottom="8dp">

                    <LinearLayout
                        android:id="@+id/version_old_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <TextView
                            style="@android:style/TextAppearance.Material.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:singleLine="true"
                            android:text="@string/installed_version"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/installed_app_version"
                            style="@android:style/TextAppearance.Material.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:singleLine="true"
                            android:textSize="16sp"
                            tools:text="11" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/version_update_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:singleLine="true"
                        android:text="@string/arrow"
                        android:textColor="?android:attr/colorAccent"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <LinearLayout
                        android:id="@+id/version_new_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <TextView
                            style="@android:style/TextAppearance.Material.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:singleLine="true"
                            android:text="@string/to_be_installed"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/updating_app_version"
                            style="@android:style/TextAppearance.Material.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:singleLine="true"
                            android:textSize="16sp"
                            tools:text="12" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/install_success"
                style="@android:style/TextAppearance.Material.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/install_done"
                android:textAlignment="center"
                android:textSize="18sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/install_failed"
                style="@android:style/TextAppearance.Material.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/install_failed"
                android:textAlignment="center"
                android:textSize="18sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/install_failed_blocked"
                style="@android:style/TextAppearance.Material.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/install_failed_blocked"
                android:textAlignment="center"
                android:textSize="18sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/install_failed_conflict"
                style="@android:style/TextAppearance.Material.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/install_failed_conflict"
                android:textAlignment="center"
                android:textSize="18sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/install_failed_incompatible"
                style="@android:style/TextAppearance.Material.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/install_failed_incompatible"
                android:textAlignment="center"
                android:textSize="18sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/install_failed_invalid_apk"
                style="@android:style/TextAppearance.Material.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/install_failed_invalid_apk"
                android:textAlignment="center"
                android:textSize="18sp"
                android:visibility="invisible" />

        </FrameLayout>
    </LinearLayout>

</FrameLayout>
